# solcesto_solver

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: bootstrap_icons_from_screenshot.py  build_species_refs.py  extract_templates.py  generate_badge_montage.py  grab_capture.py  train_capture.py
src/sol_cesto_solver/: __init__.py  __main__.py  bestiary.py  capture.py  cli.py  decision.py  grid.py  items.py  mechanics.py  overlay.py  recognition.py  species.py  state.py  teeth.py  teeth_vision.py
src/sol_cesto_solver/data/: species_refs.npz
tests/: test_bestiary.py  test_capture.py  test_decision.py  test_items.py  test_mechanics.py  test_overlay.py  test_recognition.py  test_species.py  test_teeth.py  test_teeth_vision.py
